Updated SEBasic & SEI18N plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,6 +3,10 @@
 		<plugin>
 			<pluginName>SEInternationalisation</pluginName>
 			<pluginDescription>Studio Emma Internationalisation plugin</pluginDescription>
+
+			<pluginVersion>2.0</pluginVersion>
+			<pluginRevision>2000</pluginRevision>
+
             <pluginNiceName>SEInternationalisation Plugin</pluginNiceName>
 			<pluginClassName>SEInternationalisation_Plugin</pluginClassName>
 			<!-- include paths relative to plugin-directory -->
@@ -18,12 +22,10 @@
 			</pluginNamespaces>
 			<!-- js files with path relative to plugin-directory -->
 			<pluginJsPaths>
-				<path>/SEInternationalisation/static/js/document/tree.js</path>
 				<path>/SEInternationalisation/static/js/SEInternationalisation.js</path>
 			</pluginJsPaths>
 			<!-- css files with path relative to plugin-directory -->
 			<pluginCssPaths>
-				<path>/SEInternationalisation/static/css/style.css</path>
 			</pluginCssPaths>
 		</plugin>
 </zend-config>
